Added release-3.2 code

--- a/build.xml
+++ b/build.xml
@@ -7,13 +7,8 @@
     <property name="build" location="build"/>
     <property name="obj" location="${build}/obj"/>
     <property name="executable" location="${destbindir}/${exe_name.w}"/>
-    <property name="pwd" location=""/>
-    <property name="version" value="${version_in}"/>
     <taskdef resource="cpptasks.tasks"/>
-    <property name="dev_dir" value="/ngs/projects/web/testweb/devlinuxlocal/cgi/cgi-bin"/>
-    <property name="test_dir" value="/ngs/projects/web/testweb/testlinuxlocal/cgi/cgi-bin"/>
-    <property name="prod_dir" value="/ngs/projects/web/newweb/linuxlocal/cgi/cgi-bin"/>
-    <property name="beta_dir" value="/ngs/projects/web/betaweb/betalinuxlocal/cgi/cgi-bin/"/>
+
     <!-- set the operating system test properties -->
     <condition property="isWindows">
       <os family="windows" />
@@ -33,8 +28,7 @@
     <target name="c_compile" depends="f_compile" if="isUnix">
         <cc name="cc" subsystem="console" objdir="${obj}" warnings="none">
            <compilerarg value="-g" if="debug" />
-           <compilerarg value="-std=c99" />
-           <compilerarg value="-DNGS_DB_ORACLE" />
+           <compilerarg value="-DSolaris" />
            <fileset dir=".">
              <include name="bb80ll.c" />
              <include name="expform.c" />
@@ -71,6 +65,7 @@
            </fileset>
            <includepath >
              <pathelement location="."/>
+             <pathelement location="${SYBASE_HOME}/include"/>
              <pathelement location="./inclib2"/>
              <pathelement location="./inclib3"/>
            </includepath>
@@ -84,6 +79,7 @@
            <compilerarg value="-fpp" />
            <includepath >
              <pathelement location="."/>
+             <pathelement location="${SYBASE_HOME}/include"/>
              <pathelement location="./inclib2"/>
              <pathelement location="./inclib3"/>
            </includepath>
@@ -94,7 +90,8 @@
        <antcall target="backupapp"/>
        <cc name="f77" outtype="executable" subsystem="console" outfile="${executable}">
          <fileset dir="${obj}" includes="*.o"/>
-         <libset dir="${USR_HOME}/lib" libs="nsl,m,dl" />
+         <libset dir="${SYBASE_HOME}/lib" libs="sybdb"/>
+         <libset dir="${USR_HOME}/lib" libs="nsl,m,socket,dl" />
        </cc>
     </target>
     <target name="linkallwindows" if="isWindows">
@@ -114,19 +111,6 @@
     <echo message="Operating System: ${os.name}" />
    </target>
 
-   <target name="deployweb" depends="deploy,isdev,istest,isprod">
-         <antcall target="copycgi"/>
-         <antcall target="copyexe"/>
-         <antcall target="changegroupweb"/>
-         <echo message="intg is deployed" />
-   </target>
-   <target name="deploybetaweb" depends="deploy,isbeta">
-         <antcall target="copycgi"/>
-	 <antcall target="copyexe"/>
-         <antcall target="changegroupweb"/>
-         <echo message="intg is deployed" />
-   </target>
-
     <target name="deploy" depends="linkall" if="isUnix">
       <!-- Move executable to deployment directory -->
       <!-- dev server exe is in build directory -->
@@ -138,11 +122,8 @@
             <arg value="${WRAPPER}" />
             <arg value="${destbindir}/${exe_name}" />
          </exec>
-
-         <antcall target="scpdeimos"/>
-
          <antcall target="zip"/>
-         <exec executable="/ngs/projects/database/scripts/banner" >
+         <exec executable="banner" >
             <arg value="${NGS_SERVERENV}" />            
          </exec>
          <echo message="Application deployed to ${destbindir}/${exe_name.w}" />
@@ -156,7 +137,7 @@
          </exec>
     </target>
     <!-- backup the executable only in production environment -->
-    <target name="backupapp" if="PROD,isUnix">
+    <target name="backupapp" if="isUnix">
          <tstamp/>
          <exec executable="mv" >
             <arg value="${destbindir}/${exe_name.w}" />
@@ -251,106 +232,6 @@
            <arg value="intg" />
            <arg value="intg.exe" />
          </exec>
-    </target>
-    <target name="copycgi">
-      <echo message="Copy Perl CGI ${CGI_SERVER_LOCAL}:${CGI_PATH}/"/>
-      <exec executable="/bin/sh"  >
-      	  <arg value="-c"/>
-          <arg value="scp -r ${pwd}/newweb/*.prl ${CGI_SERVER_LOCAL}:${CGI_PATH}" />
-      </exec>
-    </target>    
-    <target name="copyexe">
-      <echo message="Copy intg.exe to ${CGI_SERVER_LOCAL}: ${PC_PATH}/"/>
-      <exec executable="/bin/sh"  >
-      	  <arg value="-c"/>
-          <arg value="scp ${pwd}/intg.exe ${CGI_SERVER_LOCAL}:${PC_PATH}" />
-      </exec>
-      <exec executable="/bin/sh"  >
-      	  <arg value="-c"/>
-          <arg value="scp ${pwd}/intg.exe ${CGI_SERVER_LOCAL}:${PC_PATH}/intg_v${version}.exe" />
-      </exec>
-      <exec executable="/bin/sh"  >
-      	  <arg value="-c"/>
-          <arg value="scp ${pwd}/intg.zip ${CGI_SERVER_LOCAL}:${PC_PATH}/intg_v${version}.zip" />
-      </exec>
-    </target>
-    <target name="isdev" if="DEV" >
-      <property name="PC_PATH" value="/ngs/projects/web/testweb/htdocs/PC_PROD/GEOIDPGMS" />
-      <property name="CGI_PATH" value="${dev_dir}/GEOID_STUFF" />
-      <property name="CGI_SERVER_LOCAL" value="ngs-vsu-deimos"/>
-      <echo message="dev website location is ${CGI_SERVER_LOCAL}:${PC_PATH}/"/>
-    </target>
-    <target name="istest" if="TEST" >
-      <property name="PC_PATH" value="/ngs/projects/web/testweb/testdocs/PC_PROD/GEOIDPGMS" />
-      <property name="CGI_PATH" value="${test_dir}/GEOID_STUFF" />
-      <property name="CGI_SERVER_LOCAL" value="ngs-vsu-deimos"/>
-      <echo message="test website location is ${CGI_SERVER_LOCAL}:${PC_PATH}/"/>
-    </target>
-    <target name="isbeta"  >
-      <property name="PC_PATH" value="/ngs/projects/web/testweb/betadocs/PC_PROD/GEOIDPGMS" />
-      <property name="CGI_PATH" value="${beta_dir}/GEOID_STUFF" />
-      <property name="CGI_SERVER_LOCAL" value="deimos"/>
-      <echo message="beta website location is ${CGI_SERVER_LOCAL}:${PC_PATH}/"/>
-      <echo message=" copying ${exe_name.w} to enceladus:${destbindir} " />
-      <exec executable="/bin/ksh"  >
-          <arg value="-c" />
-          <arg value="scp ${executable} enceladus:${destbindir}" />
-      </exec>
-    </target>
-    <target name="isprod" if="PROD" >
-      <property name="PC_PATH" value="/ngs/projects/web/newweb/htdocs/PC_PROD/GEOIDPGMS" />
-      <property name="CGI_PATH" value="${prod_dir}/GEOID_STUFF" />
-      <property name="CGI_SERVER_LOCAL" value="deimos"/>
-      <echo message="prod website location is ${CGI_SERVER_LOCAL}:${PC_PATH}/"/>
-    </target>
-    <target name="changegroupweb">
-      <exec executable="/bin/sh"  >
-         <arg value="-c" />
-         <arg value="ssh ${CGI_SERVER_LOCAL} chgrp -R -f ${RELTEAM_UNXGRP} ${PC_PATH}/*" />
-      </exec>     
-      <echo message="ssh ${CGI_SERVER_LOCAL} chmod -R 775 ${PC_PATH}" />
-      <exec executable="/bin/sh"  >
-          <arg value="-c" />
-          <arg value="ssh ${CGI_SERVER_LOCAL} chmod -R 775 ${PC_PATH}/*" />
-      </exec>        
-      <exec executable="/bin/sh"  >
-         <arg value="-c" />
-         <arg value="ssh ${CGI_SERVER_LOCAL} chgrp -R -f ${RELTEAM_UNXGRP} ${CGI_PATH}/*" />
-      </exec>     
-      <echo message="ssh ${CGI_SERVER_LOCAL} chmod -R 775 ${CGI_PATH}" />
-      <exec executable="/bin/sh"  >
-          <arg value="-c" />
-          <arg value="ssh ${CGI_SERVER_LOCAL} chmod -R 775 ${CGI_PATH}/*" />
-      </exec> 
-    </target>
-    <target name="scpdeimos" if="PROD" >
-      <tstamp/>
-      <echo message=" backup program on ${CGI_SERVER}:${destbindir} " />
-      <exec executable="/bin/ksh"  >
-          <arg value="-c" />
-          <arg value="scp ${CGI_SERVER}:${executable} ${CGI_SERVER}:${destbindir}/backup/${exe_name.w}_${DSTAMP}${TSTAMP}" />
-      </exec>
-      <echo message=" copying ${exe_name.w} to ${CGI_SERVER}:${destbindir} " />
-      <exec executable="/bin/ksh"  >
-          <arg value="-c" />
-          <arg value="ssh ${CGI_SERVER} ln -s ${WRAPPER} ${destbindir}/${exe_name}" />
-      </exec>
-      <exec executable="/bin/ksh"  >
-          <arg value="-c" />
-          <arg value="scp ${executable} ${CGI_SERVER}:${destbindir}" />
-      </exec>
-      <echo message="ssh ${CGI_SERVER} chmod 775 ${destbindir}" />
-      <exec executable="/bin/ksh"  >
-          <arg value="-c" />
-          <arg value="ssh ${CGI_SERVER} chmod 775 ${executable}" />
-      </exec>
-
-      <echo message=" chgrp on ${CGI_SERVER}:${destbindir}" />
-      <exec executable="/bin/ksh"  >
-          <arg value="-c" />
-          <arg value="ssh ${CGI_SERVER} chgrp -f ${RELTEAM_UNXGRP} ${executable}" />
-      </exec>
-      <echo message=" binary deployed to ${CGI_SERVER}:${destbindir}" />
     </target>
 </project>
 
