--- a/makefile.w32
+++ b/makefile.w32
@@ -1,5 +1,5 @@
 # makefile for intg - Win32 platform
-# $RCSfile: makefile.w32,v $ - $Revision: 43814 $ - 20$Date: 2010/02/22 15:11:55 $
+# makefile.w32 - 1.1 - 2010/02/22
 #
 #  to compile and link:    make   (is same as):  make -f makefile.w32
 #  to publish:                                   make copy
@@ -21,7 +21,7 @@ CCC     =  $(CCROOT)\\bin\\g++.exe
 
 # Production
 CFLAGS   =  
-CCFLAGS  =  
+CCFLAGS  =  -DNGS_PC_ENV
 # Development and Testing
 # CFLAGS   = -g 
 # CCFLAGS  = -g -Wall
@@ -55,7 +55,7 @@ OBJECTS  = \
   flip_endian_d.o  \
   flip_endian_f.o  \
   flip_endian_l.o  \
-  getdir_geoidpc.o \
+  getdir_geoid.o \
   getgrd_geoid.o   \
   getheaders.o     \
   initsp.o         \
@@ -90,7 +90,7 @@ dms_dd.o           : dms_dd.c          dms_dd.h
 flip_endian_d.o    : flip_endian_d.c   flip_endian_d.h
 flip_endian_f.o    : flip_endian_f.c   flip_endian_f.h
 flip_endian_l.o    : flip_endian_l.c   flip_endian_l.h
-getdir_geoidpc.o   : getdir_geoidpc.c  getdir_geoid.h
+getdir_geoid.o   : getdir_geoid.c  getdir_geoid.h
 getgrd_geoid.o     : getgrd_geoid.c    getgrd_geoid.h
 getheaders.o       : getheaders.c      getheaders.h   grid_header.h
 initsp.o           : initsp.c          initsp.h
