--- a/build.xml
+++ b/build.xml
@@ -28,7 +28,8 @@
     <target name="c_compile" depends="f_compile" if="isUnix">
         <cc name="cc" subsystem="console" objdir="${obj}" warnings="none">
            <compilerarg value="-g" if="debug" />
-           <compilerarg value="-DSolaris" />
+           <compilerarg value="-std=c99" />
+           <compilerarg value="-DNGS_DB_ORACLE" />
            <fileset dir=".">
              <include name="bb80ll.c" />
              <include name="expform.c" />
@@ -90,8 +91,7 @@
        <antcall target="backupapp"/>
        <cc name="f77" outtype="executable" subsystem="console" outfile="${executable}">
          <fileset dir="${obj}" includes="*.o"/>
-         <libset dir="${SYBASE_HOME}/lib" libs="sybdb"/>
-         <libset dir="${USR_HOME}/lib" libs="nsl,m,socket,dl" />
+         <libset dir="${USR_HOME}/lib" libs="nsl,m,dl" />
        </cc>
     </target>
     <target name="linkallwindows" if="isWindows">
